--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   video_player: ^2.8.3
   go_router: ^13.2.0
+  models:
+    path: grocery_app_server/packages/models
 
 dev_dependencies:
   flutter_test:
